<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.question.QuestionFragment"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/toolbar"
        android:orientation="horizontal"
        android:background="@drawable/backround_toolbar"
        >

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/ic_baseline_arrow_back_24"
            android:padding="10dp"
            app:tint="@color/white"
            android:layout_gravity="center"
            android:id="@+id/btn_back"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:layout_margin="16dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_right_or_wrong"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:textSize="22sp"
            android:fontFamily="@font/lato_black" />

        <TextView
            android:id="@+id/tv_tablo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_tablo"
            android:fontFamily="@font/lato_regular"
            android:layout_gravity="center"
            android:gravity="end"
            android:textSize="22sp"
            android:textColor="@color/white"
            android:layout_marginEnd="16dp" />

    </LinearLayout>

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/progress_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        android:max="33"
        />

    <ImageView
        android:id="@+id/iv_sign"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:src="@drawable/a"
        android:layout_marginVertical="16dp"
        android:foreground="@drawable/background_image_sign"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:targetApi="m"
        tools:ignore="UnusedAttribute" />

    <TextView
        android:id="@+id/tv_word"
        android:layout_width="200dp"
        android:layout_height="200dp"
        tools:text="C"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_sign"
        android:textSize="150sp"
        android:gravity="center"
        android:background="@color/teal_700"
        android:textColor="@color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/tv_word"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="32dp"
        >


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_no"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/tv_word"
            app:layout_constraintEnd_toStartOf="@id/tv_word"
            android:background="@drawable/btn_background_no"
            android:text="@string/text_no"
            android:layout_gravity="center"
            android:textSize="24sp"
            android:layout_marginEnd="2dp"
            android:textColor="@color/white"
            android:padding="16dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_yes"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/btn_no"
            android:background="@drawable/btn_background_yes"
            android:text="@string/text_yes"
            android:layout_marginStart="2dp"
            android:textSize="24sp"
            android:textColor="@color/white"
            android:padding="16dp" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>