<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/pic_background_home"
    tools:context=".ui.main.MainFragment"
    >

    <LinearLayout
        android:id="@+id/toolbar"
        android:background="@drawable/backround_toolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/lato_regular"
            android:text="@string/text_sign"
            android:textColor="@color/white"
            android:textSize="22sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="12dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginHorizontal="12dp"
            android:weightSum="2"
            tools:ignore="Suspicious0dp">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_alphabet"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                app:cardCornerRadius="8dp">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="135dp"
                    android:background="#00000000"
                    android:elevation="3dp"/>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="135dp"
                    android:background="@drawable/background1"
                    android:orientation="vertical"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_margin="8dp"
                        android:src="@drawable/russian_alphabet" />

                    <TextView
                        android:id="@+id/text2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_alphabet"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:textSize="20sp"/>

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_by_word"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="4dp"
                app:cardCornerRadius="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="135dp"
                    android:orientation="vertical"
                    android:background="@drawable/background2"
                    android:gravity="center">


                    <ImageView
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_margin="8dp"
                        android:src="@drawable/ic_search" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tv_by_word"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:textSize="20sp"/>

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginHorizontal="12dp"
            android:layout_marginTop="8dp"
            android:weightSum="2"
            tools:ignore="Suspicious0dp">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_question"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                app:cardCornerRadius="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="135dp"
                    android:orientation="vertical"
                    android:background="@drawable/background3"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_margin="8dp"
                        android:src="@drawable/ic_question" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_right_or_wrong"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:textSize="20sp"/>

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_sign"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="4dp"
                app:cardCornerRadius="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="135dp"
                    android:orientation="vertical"
                    android:background="@drawable/background4"
                    android:gravity="center">


                    <ImageView
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_margin="8dp"
                        android:src="@drawable/ic_sign" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_sign_quiz"
                        android:textColor="@color/white"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:textSize="20sp"/>

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>