<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.word.WordFragment">

    <LinearLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@drawable/backround_toolbar"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_by_word"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:fontFamily="@font/lato_regular"
            android:layout_marginStart="16dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_bar"
        android:elevation="8dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_time"
            android:layout_marginVertical="16dp"
            android:layout_gravity="center"
            android:textColor="@color/color_text"
            android:textSize="22sp"
            android:fontFamily="@font/lato_regular"
            android:layout_marginStart="32dp"
            />

        <TextView
            android:id="@+id/tv_countdown_timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/countdown_timer"
            android:layout_gravity="center"
            android:textSize="22sp"
            android:textColor="@color/color_text"
            android:fontFamily="@font/lato_regular"
            android:layout_marginStart="4dp"
            />

        <TextView
            android:id="@+id/tv_check"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_check"
            android:textColor="@color/color_text"
            android:layout_gravity="center"
            android:gravity="end"
            android:layout_marginEnd="32dp"
            android:textSize="22sp"
            android:fontFamily="@font/lato_regular" />

    </LinearLayout>

    <TextView
        android:id="@+id/image_sign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/bar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="150sp"
        tools:text="A"
        android:textColor="#A57DED"
        android:fontFamily="@font/lato_regular"
        android:layout_marginTop="40dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        app:layout_constraintTop_toBottomOf="@id/image_sign"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            >

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_sign1"
                android:layout_width="0dp"
                android:layout_height="180dp"
                android:layout_marginEnd="2dp"
                android:layout_weight="1"
                android:foreground="@drawable/background_image_sign"
                android:src="@drawable/a"
                app:tintMode="add" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_sign2"
                android:layout_width="0dp"
                android:layout_height="180dp"
                android:layout_weight="1"
                android:layout_marginHorizontal="2dp"
                android:tintMode="add"
                app:tintMode="add"
                android:foreground="@drawable/background_image_sign"
                android:src="@drawable/a"
                />

            <ImageView
                android:id="@+id/iv_sign3"
                android:layout_width="0dp"
                android:layout_marginStart="2dp"
                android:foreground="@drawable/background_image_sign"
                android:layout_height="180dp"
                android:layout_weight="1"
                android:src="@drawable/a" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="4dp"
            android:orientation="horizontal"
            >

            <ImageView
                android:id="@+id/iv_sign4"
                android:layout_width="0dp"
                android:layout_height="180dp"
                android:layout_weight="1"
                android:layout_marginEnd="2dp"
                android:foreground="@drawable/background_image_sign"
                android:src="@drawable/a" />

            <ImageView
                android:id="@+id/iv_sign5"
                android:layout_width="0dp"
                android:layout_height="180dp"
                android:layout_weight="1"
                android:layout_marginHorizontal="2dp"
                android:foreground="@drawable/background_image_sign"
                android:src="@drawable/a" />

            <ImageView
                android:id="@+id/iv_sign6"
                android:layout_width="0dp"
                android:layout_marginStart="2dp"
                android:foreground="@drawable/background_image_sign"
                android:layout_height="180dp"
                android:layout_weight="1"
                android:src="@drawable/a" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>